--- a/index.html
+++ b/index.html
@@ -1,38 +1,4 @@
-<h1>我需要每天能赚2.5元的项目</h1>
-<p> 有什么稳定的项目，都可以来找我，全天在线，骗人的项目勿扰，加我qq2748772829<p/>
-<p> 大家都可以互相交流一下!!!</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
-<p>我需要每天能赚2.5元的项目！！！加我qq2748772829</p>
+<h>欢迎来到我的个人博客，我会分享一些有意思的互联网项目<h/>
+<body>
+<img border="0" src="/ztqpodax.png" alt="Pulpit rock" width="304" height="228">
+<body/>
