--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<h>欢迎来到我的个人博客，我会分享一些有意思的互联网项目<h/>
+<!DOCTYPE html>
+<html>
+<head> 
+<meta charset="utf-8"> 
+<title>菜鸟教程(runoob.com)</title> 
+</head>
 <body>
-<img border="0" src="/ztqpodax.png" alt="Pulpit rock" width="1280" height="720">
-<body/>
+
+<h2>Norwegian Mountain Trip</h2>
+<img border="0" src="/ztqpodax.png" alt="Pulpit rock" width="304" height="228">
+
+</body>
+</html>
