--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
-<!DOCTYPE html>
+
 <html>
 <head> 
 <meta charset="utf-8"> 
-<title>菜鸟教程(runoob.com)</title> 
+<title>欢迎来到我的个人博客</title> 
 </head>
 <body>
 
-<h2>Norwegian Mountain Trip</h2>
-<img border="0" src="/ztqpodax.png" alt="Pulpit rock" width="304" height="228">
+<h2>欢迎来到我的个人博客，我会分享一些互联网赚钱项目</h2>
 
+  <p>有些内容是需要付费的，现在是知识付费时代，免费的项目没人带根本作不起来，骗人的生意不长久，长久的生意不骗人<p/>
+  <p>想学什么技能就进什么圈子，你在什么圈子就决定你是个什么样的人，很多事情其实都是先出发，<p/>
+  <p>再在路上不断的调整找答案再慢慢修正的。<p/>
+  <p> 没有人做第一次选择就能做对，都在不断修正。只要你这颗心不死，折腾就完了 <p/>
+
+  <p>加我🛰a2748772829<p/>
 </body>
 </html>
